--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,11 @@ body {
     width: 100vw;
 }
 
+.hidden {
+    visibility: hidden;
+    height: 0;
+}
+
 .container {
     background-image: url(./images/jobhunt.jpg);
     background-position: center;
